--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Solo CVLI</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In dolorum ducimus dolor, maxime quo excepturi facilis cupiditate. Dicta rem placeat earum, nobis alias nihil animi, cupiditate doloribus aliquid deleniti provident.
     Laudantium, repellat? Repudiandae quasi accusantium officiis mollitia consectetur, sit ipsa. Molestiae culpa nulla porro. Quam omnis maiores deserunt? Officia fugit laudantium nemo, assumenda cum iste reprehenderit architecto iure temporibus quis!</p>
+    <h2>Titulo 2</h2>
+    
 </body>
 </html>
